--- a/src/styles/components/login/_login.scss
+++ b/src/styles/components/login/_login.scss
@@ -89,6 +89,12 @@
     height: 100%;
     object-fit: cover;
   }
+  &__link {
+    font-size: 1.6rem;
+    color: #555;
+    display: block;
+    margin-top: 2rem;
+  }
 }
 
 .img__1 {
