--- a/src/styles/components/shop/product/_productList.scss
+++ b/src/styles/components/shop/product/_productList.scss
@@ -112,6 +112,7 @@
     transition: all 0.5s;
     font-weight: 400;
     letter-spacing: 1px;
+    width: 100%;
 
     &:hover {
       cursor: pointer;
