--- a/src/styles/components/modals/_cart.scss
+++ b/src/styles/components/modals/_cart.scss
@@ -71,16 +71,13 @@
   margin: 1rem 0;
   column-gap: 1rem;
   width: 100%;
-
-  &:hover {
-    background-color: #ddd;
-    cursor: pointer;
-  }
+  cursor: auto;
 
   &--img {
     width: 100%;
     height: 100%;
     grid-column: 1/2;
+    cursor: pointer;
   }
   &--caracteristics {
     display: flex;
@@ -110,6 +107,17 @@
     color: var(--color-primary-dark);
     letter-spacing: 1.5px;
   }
+  &--eliminate {
+    margin-top: 1rem;
+    color: #666;
+    font-size: 1.2rem;
+    transition: all 0.5s;
+
+    &:hover {
+      text-decoration-line: underline;
+      cursor: pointer;
+    }
+  }
 }
 
 .subtotal {
@@ -121,5 +129,43 @@
 
   &:hover {
     cursor: auto;
+  }
+}
+
+.userModal {
+  position: absolute;
+  top: 100%;
+  right: 3%;
+  width: 20rem;
+  cursor: auto;
+
+  background-color: white;
+  border: 1px solid #999;
+
+  &__heading {
+    color: #333;
+    font-weight: 400;
+    font-size: 1.6rem;
+    padding: 0.5rem;
+  }
+
+  &__link {
+    font-size: 1.4rem;
+    display: block;
+    color: #555;
+    margin: 0.5rem 1rem;
+    text-decoration: none;
+    transition: all 0.5s;
+
+    &::after {
+      content: "";
+      background-color: black;
+      height: 10px;
+      width: 100%;
+    }
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
